--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
         <nav class="navigation__nav">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="#about" class="navigation__link"
-                ><span>01</span> Quienes somos?</a
+              <a href="#intro" class="navigation__link"
+                ><span>01</span>Qué son los alimentos orgánicos.</a
               >
             </li>
             <li class="navigation__item">
-              <a href="#features" class="navigation__link"
-                ><span>02</span> Nuestras líneas
+              <a href="#old" class="navigation__link"
+                ><span>02</span> Nuestra finca, la primera.
               </a>
             </li>
             <li class="navigation__item">
-              <a href="#tours" class="navigation__link"
-                ><span>03</span> Nuestros Productos</a
+              <a href="#facts" class="navigation__link"
+                ><span>03</span>Motivos  y mitos de la producción orgánica</a
               >
             </li>
             <li class="navigation__item">
-              <a href="#stories" class="navigation__link"
-                ><span>04</span> Testimonios</a
+              <a href="#section-products" class="navigation__link"
+                ><span>04</span> Productos</a
               >
             </li>
             <li class="navigation__item">
-              <a href="#book" class="navigation__link"
+              <a href="#contacto" class="navigation__link"
                 ><span>05</span> Contacto
               </a>
             </li>
@@ -86,7 +86,7 @@
     </header>
 
     <body>
-      <section class="intro">
+      <section id="intro">
         <div class="with-img">
           <div class="text">
             <h1 class="heading-primary--sub">
@@ -123,7 +123,7 @@
         </div>
       </section>
 
-      <section class="section-img">
+      <section id="section-imgs">
         <ul class="showcase clear-fix">
           <li>
             <figure class="showcase-photo">
@@ -234,7 +234,7 @@
         </ul>
       </section>
 
-      <section class="old">
+      <section id="old">
         <div class="col-2">
           <div class="img-container">
             <picture class="old-picture">
@@ -261,7 +261,7 @@
       </section>
       <!--  -->
 
-      <section class="facts">
+      <section id="facts">
         <ul class="facts__container">
           <li class="fact">
             <h2 class="fact__title r heading-primary--sub">
@@ -469,7 +469,7 @@
         </ul>
       </section>
 
-      <section class="section-products">
+      <section id="section-products">
         <h1 class="heading-secondary u-margin-top-big u-center-text">
           Productos
         </h1>
@@ -542,6 +542,8 @@
       let srcImg = document.getElementById("src")
       let modalBg = document.querySelector(".modal-bg");
       let modalClose = document.querySelector(".modal-close");
+      let links = document.querySelectorAll(".navigation__link")
+      const ham = document.querySelector(".navigation__checkbox");
 
       //EVENT LISTENERS
       window.addEventListener("scroll", function () {
@@ -556,6 +558,12 @@
         if (value >= 350) {
           firstTitle.classList.add("move-in");
         }
+      });
+
+      links.forEach((link) => {
+        link.addEventListener("click", () => {
+          ham.checked = false;
+        });
       });
 
       facts.forEach((el) =>
