added the whole contact form section, content and styles

--- a/index.html
+++ b/index.html
@@ -505,6 +505,78 @@
           </picture>
         </div>
       </section>
+
+      <section class="section-form" id="contacto">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form
+                data-netlify="true"
+                name="contacto"
+                action="./success.html"
+                class="form"
+              >
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">
+                    Prueba nuestros productos ahora!
+                  </h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    id="name"
+                    name="nombre"
+                    class="form__input"
+                    placeholder="*Nombre"
+                    required
+                  />
+                  <label for="name" class="form__label">Nombre</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    class="form__input"
+                    placeholder="*Email"
+                    required
+                  />
+                  <label for="email" class="form__label">Email</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="number"
+                    id="phone"
+                    name="numero"
+                    class="form__input"
+                    placeholder="Teléfono"
+                  />
+                  <label for="phone" class="form__label">Teléfono</label>
+                </div>
+
+                <div class="form__group">
+                  <textarea
+                    rows="4"
+                    id="message"
+                    name="message"
+                    class="form__input"
+                    placeholder="Mándanos un mensaje, cuéntanos qué te gustaría y te contactaremos en la brevedad posible."
+                    required
+                  ></textarea>
+                </div>                
+
+                <div class="form__group">
+                  <button class="btn btn--green" type="submit">
+                    Enviar &rarr;
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </body>
 
     <footer>
