added the whole footer

--- a/index.html
+++ b/index.html
@@ -614,8 +614,15 @@
             <p class="small-text">mail</p>
           </div>
 
-          <div class="media">
-            <svg class="facebook">
+          <div class="instagram">
+            <svg>
+              <use xlink:href="imgs/sprite.svg#icon-instagram"></use>
+            </svg>
+            <p class="small-text">hacienda_angostura</p>
+          </div>
+
+          <div class="facebook">
+            <svg>
               <use xlink:href="imgs/sprite.svg#icon-facebook"></use>
             </svg>
             <p class="small-text">Hacienda Angostura</p>
@@ -624,12 +631,14 @@
       </div>
 
       <div class="footer__copyright">
-        Copyright &copy; 2020
-        <span class="modal-btn"
-          ><a href="www.phi-desarrollo.com" rel="noreferrer" target="_blank"
+        <p>
+          Copyright &copy; 2020
+
+          <a href="www.phi-desarrollo.com" rel="noreferrer" target="_blank"
             >Phi - Diseño y Desarrollo Web</a
-          ></span
-        >. Todos los derechos reservados.
+          >
+          Todos los derechos reservados.
+        </p>
       </div>
 
       <div class="modal-bg">
