--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <p>
               En la producción de alimentos orgánicos <strong>no</strong> se
-              emplea plaguicidas ni fertilizantes de síntesis química. Están
+              emplea plaguicidas ni fertilizantes de síntesis química 🧫. Están
               libres de hormonas, antibióticos, residuos de metales pesados, sin
               uso de colorantes y saborizantes artificiales, así como de
               Organismos genéticamente Modificados. 💀 <br />
@@ -610,21 +610,31 @@
             <svg>
               <use xlink:href="imgs/sprite.svg#icon-mail"></use>
             </svg>
-            <p class="small-text">mail</p>
+            <p class="small-text">haciendaangostura@gmail.com</p>
           </div>
 
           <div class="instagram">
             <svg>
               <use xlink:href="imgs/sprite.svg#icon-instagram"></use>
             </svg>
-            <p class="small-text">hacienda_angostura</p>
+            <a
+              href="https://www.instagram.com/hacienda_angostura/"
+              target="_blank"
+              rel="noreferrer"
+              ><p class="small-text">hacienda_angostura</p></a
+            >
           </div>
 
           <div class="facebook">
             <svg>
               <use xlink:href="imgs/sprite.svg#icon-facebook"></use>
             </svg>
-            <p class="small-text">Hacienda Angostura</p>
+            <a
+              href="https://www.facebook.com/HaciendaAngostura/"
+              rel="noreferrer"
+              target="_blank"
+              ><p class="small-text">Hacienda Angostura</p></a
+            >
           </div>
         </div>
       </div>
@@ -686,7 +696,16 @@
       let links = document.querySelectorAll(".navigation__link");
       const ham = document.querySelector(".navigation__checkbox");
 
+      //RESPONSIVE JAVASCRIPT FOR TABLETS TO PHONES
+      var width = window.matchMedia("(max-width: 900px)");
+
+      //GETTING AHEAD WITH THE FIRST TITLE
+      if (width.matches) {
+        firstTitle.classList.add("move-in");
+      }
+
       //EVENT LISTENERS
+
       window.addEventListener("scroll", function () {
         var value = window.scrollY;
 
@@ -697,6 +716,12 @@
         logo.style.top = 25 + value * 0.1 + "%";
         main.style.top = 100 - value * 0.1 + "px";
         sunrise.style.opacity = 25 - value / 13.33 + "%";
+
+        if (width.matches) {
+          sun.style.left = -50 + value * 2 + "px";
+          sun.style.top = 250 - value * 1.3 + "px";
+          logo.style.top = 25 + value * 0.2 + "%";
+        }
 
         if (value >= 350) {
           firstTitle.classList.add("move-in");
