fixed the ham button list

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               Sabías que la Hacienda Angostura funciona desde 1916?
             </h1>
             <h1 class="heading-primary--sub u-margin-top-big u-center-text">
-              ....con <span id="year"></span> años es la granja lechera
+              ...con <span id="year"></span> años es la granja lechera
               <strong>más antigua</strong> de Cochabamba.
             </h1>
           </div>
