added the <meta> description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hacienda Angostura es una granja orgánica de gran trayectoria desde 1916, situada en Cochabamba, Bolivia.">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="./imgs/logo.png" />
     <title>Hacienda Angostura | Productos orgánicos</title>
