added moms suggestions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Hacienda Angostura es una granja orgánica de gran trayectoria desde 1916, situada en Cochabamba, Bolivia.">
+    <meta
+      name="description"
+      content="Hacienda Angostura es una granja orgánica de gran trayectoria desde 1916, situada en Cochabamba, Bolivia."
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="./imgs/logo.png" />
     <title>Hacienda Angostura | Productos orgánicos</title>
@@ -105,10 +108,10 @@
               🌄 Se trata de alimentos de producción sostenible, amigable con el
               medio ambiente y respetuosa de los animales 🐄. <br />
               <br />
-              Con todo ésto se producen alimentos de mayor calidad y mejor
+              ¡Con todo ésto se producen alimentos de mayor calidad y mejor
               sabor! <br />
               <br />
-              Quieres probarlos? 🌈
+              ¿Quieres probarlos? 🌈
               <br />
               <br />
             </p>
@@ -274,7 +277,7 @@
                 <p>
                   Nosotros somos responsables de la sustentabilidad y
                   sostenibilidad de los recursos. Es imprescindible pensar en
-                  las próximas generaciones. El consumo de alimentos orgánicos,
+                  las próximas generaciones. El consumo de alimentos orgánicos
                   proveen una dieta segura, libre de pesticidas y residuos de
                   productos químicos sintéticos.
                 </p>
@@ -282,7 +285,7 @@
               <li>
                 <h4><strong>Erosión de Suelos</strong></h4>
                 <p>
-                  Los datos e investigaciones científicas, determinan que la
+                  Los datos e investigaciones científicas determinan que la
                   erosión que padecen los suelos tratados con fertilizantes
                   químicos es 7 veces más veloz que la capacidad de
                   reconstrucción natural de los mismos.
@@ -386,7 +389,7 @@
               <li>
                 <strong>Mito:</strong> "Al no tratarse con productos añadidos,
                 los alimentos orgánicos suponen mayores riesgos para la salud y,
-                además, tienen menor calidad" <br />
+                además, tienen menor calidad." <br />
                 <strong>La realidad:</strong> Indudablemente, los alimentos
                 cultivados sin aditivos, pesticidas artificiales o productos
                 químicos de origen industrial son más naturales que otros que no
@@ -405,7 +408,7 @@
               <li>
                 <strong>Mito:</strong> "Los productos orgánicos también están
                 ‘modificados’ genéticamente, pues cualquier organismo está
-                sujeto a evolución"
+                sujeto a evolución."
                 <br />
                 <strong>La realidad:</strong> La modificación genética de los
                 alimentos mediante procesos industriales y artificiales puede
@@ -448,7 +451,7 @@
               </li>
               <li>
                 <strong>Mito:</strong> "Los alimentos orgánicos se conservan
-                peor"
+                peor."
                 <br />
                 <strong>La realidad:</strong> Un producto orgánico se conserva
                 lo que debe conservarse según sus propiedades naturales; ni más
@@ -519,7 +522,7 @@
               >
                 <div class="u-margin-bottom-medium">
                   <h2 class="heading-secondary">
-                    Prueba nuestros productos ahora!
+                    ¡Prueba nuestros productos ahora!
                   </h2>
                 </div>
                 <div class="form__group">
