Changed the footer's url to my github

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <br />
               <br />
             </p>
-            <a href="#" class="btn">Contáctanos!</a>
+            <a href="#contacto" class="btn">Contáctanos!</a>
           </div>
 
           <div class="img">
@@ -647,7 +647,7 @@
         <p>
           Copyright &copy; 2020
 
-          <a href="www.phi-desarrollo.com" rel="noreferrer" target="_blank"
+          <a href="https://github.com/KurtGuardia" rel="noreferrer" target="_blank"
             >Phi - Diseño y Desarrollo Web</a
           >
           Todos los derechos reservados.
