updated phi's link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <source srcset="imgs/showcase4.webp" type="image/webp" />
                 <source srcset="imgs/showcase4.png" type="image/png" />
                 <img
-                  src="imgs/showcase4.png"
+                  src="imgs/.png"
                   alt="showcase image"
                   class="showcase-img"
                 />
@@ -647,7 +647,7 @@
         <p>
           Copyright &copy; 2020
 
-          <a href="https://github.com/KurtGuardia" rel="noreferrer" target="_blank"
+          <a href="https://www.phi-desarrollo.com/" rel="noreferrer" target="_blank"
             >Phi - Diseño y Desarrollo Web</a
           >
           Todos los derechos reservados.
