bug fix and scroll bar enhanced

--- a/index.html
+++ b/index.html
@@ -648,10 +648,10 @@
           Copyright &copy; 2020
 
           <a
-            href="https://www.phi-desarrollo.com/"
+            href="https://www.kurtguardia.com/"
             rel="noreferrer"
             target="_blank"
-            >Phi - Diseño y Desarrollo Web</a
+            >Kurt Guardia</a
           >
           Todos los derechos reservados.
         </p>
